--- a/index.html
+++ b/index.html
@@ -10,21 +10,20 @@
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="./css/navbar.css" />
 </head>
-<!-- <i class="fa fa-star" aria-hidden="true"></i
-    > -->
+
 
 <body>
   <div class="main-container">
     <nav class="navbar">
       <div class="logo">Roof Store</div>
       <ul class="navbar-links">
-        <li><a class="active" href="#">Home</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">More</a></li>
+        <li><a class="active" href="./index.html">Home</a></li>
+        <li><a href="./pages/services.html">Services</a></li>
+        <li><a href="./pages/about.html">About</a></li>
+        <li><a href="./pages/more.html">More</a></li>
       </ul>
       <ul id="contact-info">
-        <li class="contact-phone-number">602-431-1112</li>
+        <li class="contact-phone-number">(602) 431 1112</li>
         <li class="contact-nav-button">Contact</li>
       </ul>
     </nav>
@@ -148,6 +147,31 @@
 
   </div>
   <div class="main-container">
+    <div class="solutions">
+     <div class="solution">
+      <h3>Custom Solutions</h3>
+      <p>
+        Amet consectetur adipisicing elit. Enim, illo
+        quasi. Sit, doloremque
+      </p>
+      <p>
+       Voluptatum vitae eligendi non officiis dolorem nesciunt
+        rem impedit ipsam. Non? Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Quo, tempora quasi. Rerum alias eaque quo.
+      </p>
+     </div>
+     <div class="solution">
+      <h3>Unique Way</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores cumque minima distinctio. Asperiores, eligendi. Modi a ad sint nemo iste!
+      </p>
+      <p>
+       Voluptatum vitae eligendi non officiis dolorem nesciunt
+        rem impedit ipsam. Non? Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Quo, tempora quasi. Rerum alias eaque quo.
+      </p>
+     </div>
+    </div>
     <footer>
       <div class="legal">
         <h4>Legal</h4>
