--- a/pages/services.html
+++ b/pages/services.html
@@ -19,8 +19,8 @@
       <ul class="navbar-links">
         <li><a  href="../index.html">Home</a></li>
         <li><a class="active" href="./pages/services.html">Services</a></li>
-        <li><a href="./pages/about.html">About</a></li>
-        <li><a href="./pages/more.html">More</a></li>
+        <li><a href="/pages/about.html">About</a></li>
+        <li><a href="/pages/more.html">More</a></li>
       </ul>
       <ul id="contact-info">
         <li class="contact-phone-number">602-431-1112</li>
