--- a/pages/about.html
+++ b/pages/about.html
@@ -28,7 +28,7 @@
       </ul>
     </nav>
     <!-- end navbar -->
-   <div class="mission">
+   <div class="mission" style="margin-top:120px">
        <div>
 
            <h3>Our Mission</h3>
